# evoked

./: .gitignore  README.md  pyproject.toml
src/epspkit/: analysis.ipynb  analysis.py  base.py  io.py  main.py  plotting.py  preprocess.py  snr.py  stats.py  template.py
src/epspkit/cli/: main.py  template_summary.py
src/epspkit/core/: base.py  config.py  math.py
src/epspkit/docs/: epspkit.md
src/epspkit/examples/: main.py  quickstart.ipynb
src/epspkit/features/: base.py  epsp.py  fiber_volley.py  pop_spike.py
src/epspkit/io/: read_write.py
src/epspkit/pipeline/: api.py
src/epspkit/transforms/: __init__.py  baseline.py  preprocess.py  stim_artifact.py  template.py
src/epspkit/viz/: __init__.py  annotated.py  base.py  derivative.py  sweep.py  template.py  template_simple.py
src/evoked/: analysis.ipynb  analysis.py  analysis61926.ipynb  app.py  base.py  blind_review.py  eigentemplate.py  generative.py  io.py  lda.py  main.py  ols.py  plotting.py  preprocess.py  template.py
src/evoked/data/: 2025_03_02_0000.abf  2025_03_02_0003.abf  2025_03_02_0010.abf  2025_03_03_0000.abf  2025_03_03_0001.abf  2025_03_03_0006.abf  2025_03_03_0007.abf  2025_03_04_0000.abf  2025_03_04_0002.abf  2025_03_04_0003.abf  2025_03_04_0005.abf  2025_03_04_0009.abf  2025_03_04_0012.abf  2025_03_05_0000.abf  2025_03_05_0002.abf  2025_03_05_0004.abf  2025_03_05_0007.abf  2025_03_05_0009.abf  2025_03_06_0001.abf  2025_03_06_0002.abf  2025_03_06_0004.abf  2025_03_06_0007.abf  2025_03_06_0010.abf  2025_03_07_0002.abf  2025_03_07_0005.abf  2025_03_07_0007.abf  2025_03_07_0008.abf  2025_03_07_0009.abf  2025_05_22_0000.abf  2025_05_22_0001.abf  2025_05_22_0005.abf  2025_05_22_0006.abf
src/evoked/docs/: epspkit.md
src/evoked/examples/: analysis_2026_06_19.ipynb
src/test5/: 2025_03_05_0004_results.xlsx  2025_03_07_0008_results.xlsx
