[project]
name = "evoked"
version = "0.1.0"
description = "A package for analyzing evoked local field potentials using template matching."
readme = "README.md"
authors = [{ name = "Blake Byer", email = "blake@blakebyer.com" }, ]

packages = [{ include = "evoked", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14"
matplotlib = "3.10.8"
numpy = "2.4.1"
pandera = {extras = ["polars"], version = "^0.32.1"}
pyabf = "2.3.8"
scipy = "1.17.0"
streamlit = "1.58.0"
streamlit-adjustable-columns = "0.2.1"
openpyxl = "3.1.5"
plotly = "6.2.0"
notebook = "^7.6.0"
scikit-learn = "^1.9.0"
xlsxwriter = "^3.2.9"
polars = "^1.42.1"

[project.urls]
repository = "https://github.com/blakebyer/evoked"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
